--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     <main>
         <div class="container">
             <div class="container_box">
-                
+                <h2 class="intro">
+                    Scegli la difficoltà e premi il pulsante Play per giocare.
+                </h2>
             </div>
         </div>
     </main>
