fine partita a modo mio, aggiunta commenti

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 <body class="debug">
     <header>
         <div class="container">
+            <!-- logo e titolo gioco -->
             <div class="logo">
                 <img src="img/logo.png" alt="logo boolean">
                 <h1>Campo Minato</h1>
             </div>
 
+            <!-- livelli di difficoltà -->
             <div class="levels">
                 <span class="text">Difficoltà:</span>
                 <select id="level">
@@ -32,7 +34,9 @@
 
     <main>
         <div class="container">
+            <!-- container che conterrà le celle inserite dinamicamente con js all'avvio del gioco -->
             <div class="container_box">
+                <!-- messaggio di inizio che scompare al click del bottone play -->
                 <h2 class="intro">
                     Scegli la difficoltà e premi il pulsante Play per giocare.
                 </h2>
